MFH: Fixed bug #34214 (base64_decode() does not properly ignore whitespace)