ext/standard/base64.c
@@ -15,7 +15,7 @@
    | Author: Jim Winstead <jimw@php.net>                                  |
    +----------------------------------------------------------------------+
  */
-/* $Id: base64.c,v 1.43 2005/08/03 14:07:56 sniper Exp $ */
+/* $Id: base64.c,v 1.44 2005/08/26 03:32:53 iliaa Exp $ */
 
 #include <string.h>
 
@@ -152,15 +152,6 @@ PHPAPI unsigned char *php_base64_decode(const unsigned char *str, int length, in
 	/* run through the whole string, converting as we go */
 	while ((ch = *current++) != '\0' && length-- > 0) {
 		if (ch == base64_pad) break;
-
-	    /* When Base64 gets POSTed, all pluses are interpreted as spaces.
-		   This line changes them back.  It's not exactly the Base64 spec,
-		   but it is completely compatible with it (the spec says that
-		   spaces are invalid).  This will also save many people considerable
-		   headache.  - Turadg Aleahmad <turadg@wise.berkeley.edu>
-	    */
-
-		if (ch == ' ') ch = '+'; 
 
 		ch = base64_reverse_table[ch];
 		if (ch < 0) continue;
